--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ rp-api/
 # 2. Ignorer les fichiers par extension
 #    L'astérisque (*) est un caractère joker qui signifie "n'importe quel nom de fichier".
 
+# Ignorer les fichier mesures :
+*.csv
+
 # Ignorer les fichiers objets (.o, .obj)
 *.o
 *.obj
@@ -19,6 +22,7 @@ rp-api/
 *.bat
 *.com
 *.msi
+*.
 
 # Sur Linux/macOS, les exécutables n'ont souvent pas d'extension.
 # On utilise une astuce : on ignore tous les fichiers qui n'ont PAS d'extension.
